Replace uses of BasicAer with FakeProvider, qasm_simulator with test_simulator, unitary_simulator with quantum_info.Operator and statevector_simulator with quantum_info.Statevector

--- a/test/python/notebooks/test_pbar_status.ipynb
+++ b/test/python/notebooks/test_pbar_status.ipynb
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "sim_backend = TestProvider.get_backend(\"qasm_simulator\")"
+    "sim_backend = TestProvider.get_backend(\"test_simulator\")"
    ]
   },
   {
